# DeepLearningLabs

./: CMakeLists.txt  README.md  lab_report.docx
include/: DigitsDataset.h  NeuralNet.h
src/: main.cpp
